chapter05/external-service-endpoints.yaml
# '클러스터 내 파드의 요청을 받아서 클러스터 외부로 전달하는 서비스'에 사용되는 엔드포인트
apiVersion: v1
kind: Endpoints
metadata:
  # 엔드포인트 리소스 이름은 서비스의 이름과 일치해야 한다
  name: external-service
subsets:
  - addresses:
      # 서비스가 연결을 전달할 엔드포인트의 IP
      - ip: 11.11.11.11
      - ip: 22.22.22.22
    ports:
      # 엔드포인트의 대상 포트
      - port: 80
