chapter05/external-service-externalname.yaml
# 클러스터 내 파드의 요청을 받아서 클러스터 외부로 전달하는 서비스
# 서비스의 엔드포인트를 수동으로 구성해 외부 서비스를 노출하는 대신, FQDN으로 외부 서비스를 참조할 수 있다.
# 이렇게 하면 파드에서 실제 외부 서비스 이름과 위치가 숨겨져서 나중에 변경이 쉽다.
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  # 서비스 유형이 ExternalName 으로 설정된다.
  type: ExternalName
  # 실제 서비스의 정규화된 도메인 네임
  externalName: jsonplaceholder.typicode.com
  ports:
    - port: 80
