chapter05/kubia-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: None # 이 부분이 서비스를 헤드리스로 만든다
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
