chapter05/kubia-svc-loadbalancer.yaml
# 노드포트 서비스
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  # LoadBalancer 유형의 서비스는 쿠버네티스 클러스터를 호스팅하는 인프라에서 로드밸런서를 얻을 수 있다
  type: LoadBalancer
  ports:
    - port: 80 # 서비스 내부 클러스터 IP의 포트
      targetPort: 8080 # 서비스 대상 파드의 포트
      # nodePort 를 지정할 수 있지만 쿠버네티스가 지정할 수 있도록 여기선 설정하지 않는다.
  selector:
    app: kubia
