chapter05/kubia-svc-nodeport.yaml
# 노드포트 서비스
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
    - port: 80 # 서비스 내부 클러스터 IP의 포트
      targetPort: 8080 # 서비스 대상 파드의 포트
      nodePort: 30123 # 각 클러스터 노드의 포트 30123으로 서비스에 액세스할 수 있다. 생략하면 쿠버네티스가 임의의 포트를 선택한다
  selector:
    app: kubia
